# nimby_lsp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.sh  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api-definitions/: nimbyrails.v1.toml
crates/nimbyscript-analyzer/: Cargo.toml
crates/nimbyscript-analyzer/src/: api.rs  diagnostics.rs  lib.rs  scope.rs  symbols.rs  types.rs
crates/nimbyscript-analyzer/src/semantic/: context.rs  mod.rs
crates/nimbyscript-analyzer/src/semantic/passes/: control_flow.rs  mod.rs  name_resolution.rs  nimbyscript_rules.rs  scope_analysis.rs  struct_validation.rs  type_checking.rs
crates/nimbyscript-lsp/: Cargo.toml  build.rs
crates/nimbyscript-lsp/src/: backend.rs  completions.rs  document.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hints.rs  lib.rs  linked_editing.rs  main.rs  navigation.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  test_helpers.rs  type_hierarchy.rs  type_inference.rs  validation.rs  workspace_symbol.rs
crates/nimbyscript-lsp/src/snapshots/: nimbyscript_lsp__semantic_tokens__tests__snapshot_comments.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_enum_definition.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_function_call.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_function_definition.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_let_statement.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_method_definition.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_minimal.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_path_expression.snap  nimbyscript_lsp__semantic_tokens__tests__snapshot_struct_definition.snap
crates/nimbyscript-lsp/tests/: integration.rs
crates/nimbyscript-parser/: Cargo.toml
crates/nimbyscript-parser/grammar/: common.pest  declarations.pest  expressions.pest  literals.pest  main.pest  metadata.pest  statements.pest  types.pest
crates/nimbyscript-parser/src/: ast.rs  grammar.pest  lib.rs
crates/tree-sitter-nimbyscript/: Cargo.toml  build.rs  grammar.js  package-lock.json  package.json  tree-sitter.json
crates/tree-sitter-nimbyscript/bindings/rust/: lib.rs
crates/tree-sitter-nimbyscript/queries/: highlights.scm
crates/tree-sitter-nimbyscript/src/: grammar.json  node-types.json  parser.c
editors/neovim/: .luacheckrc  README.md
editors/neovim/lua/nimbyscript/: init.lua
editors/neovim/queries/nimbyscript/: highlights.scm
editors/vscode/: .eslintrc.json  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  nimbyscript-0.1.0.vsix  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: nimbyscript.tmLanguage.json
tests/fixtures/invalid/: bad_callback_sig.nimbyscript  invalid_in_assignment.nimbyscript  invalid_method.nimbyscript  invalid_struct_method.nimbyscript  invalid_variable_param.nimbyscript  missing_semicolon.nimbyscript  unclosed_brace.nimbyscript
tests/fixtures/valid/: all_callbacks.nimbyscript  complex_types.nimbyscript  example.nimbyscript  hitch.nimbyscript  minimal.nimbyscript
