[package]
name = "nimbyscript-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nimbyscript-parser = { path = "../nimbyscript-parser" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
