[package]
name = "tree-sitter-nimbyscript"
version = "0.6.0"
edition = "2021"
description = "Tree-sitter grammar for NimbyScript"
license = "MIT"
build = "build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.24"

[build-dependencies]
cc = "1.0"

[lints]
workspace = true
